import grpc
from concurrent import futures
import logging
import json
from datetime import datetime

# –ì–µ–Ω–µ—Ä–∏—Ä—É–µ–º—ã–µ —Ñ–∞–π–ª—ã –∏–∑ .proto
import plugin_pb2
import plugin_pb2_grpc

class WorkingLogProcessorServicer(plugin_pb2_grpc.LogProcessorServicer):
    """–†–∞–±–æ—Ç–∞—é—â–∏–π gRPC –ø–ª–∞–≥–∏–Ω –¥–ª—è —Ñ–∏–ª—å—Ç—Ä–∞—Ü–∏–∏ –æ—à–∏–±–æ–∫"""
    
    def ProcessLogs(self, request, context):
        processed_entries = []
        error_count = 0
        
        for entry in request.entries:
            # –ü—Ä–æ—Å—Ç–∞—è –ª–æ–≥–∏–∫–∞ —Ñ–∏–ª—å—Ç—Ä–∞—Ü–∏–∏: –ø–æ–º–µ—á–∞–µ–º –æ—à–∏–±–∫–∏ –∏ –ø—Ä–µ–¥—É–ø—Ä–µ–∂–¥–µ–Ω–∏—è
            processed_entry = plugin_pb2.LogEntry()
            processed_entry.CopyFrom(entry)
            
            # –î–æ–±–∞–≤–ª—è–µ–º –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
            processed_entry.metadata['processed_by'] = 'error_filter_plugin'
            processed_entry.metadata['processed_at'] = datetime.now().isoformat()
            
            # –õ–æ–≥–∏–∫–∞ —Ñ–∏–ª—å—Ç—Ä–∞—Ü–∏–∏
            if 'error' in entry.message.lower():
                processed_entry.metadata['priority'] = 'high'
                processed_entry.message = f"üö® ERROR: {entry.message}"
                error_count += 1
            elif 'warn' in entry.message.lower():
                processed_entry.metadata['priority'] = 'medium' 
                processed_entry.message = f"‚ö†Ô∏è WARN: {entry.message}"
            else:
                processed_entry.metadata['priority'] = 'low'
                
            processed_entries.append(processed_entry)
        
        return plugin_pb2.ProcessLogsResponse(
            entries=processed_entries,
            statistics={
                'total_processed': str(len(processed_entries)),
                'errors_found': str(error_count),
                'plugin_version': '1.0.0'
            }
        )

    def GetCapabilities(self, request, context):
        return plugin_pb2.GetCapabilitiesResponse(
            capabilities=['error_filtering', 'priority_tagging', 'metadata_enrichment'],
            version='1.0.0'
        )

def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    plugin_pb2_grpc.add_LogProcessorServicer_to_server(WorkingLogProcessorServicer(), server)
    server.add_insecure_port('[::]:50051')
    server.start()
    print("‚úÖ Working gRPC plugin running on port 50051")
    server.wait_for_termination()

if __name__ == '__main__':
    logging.basicConfig(level=logging.INFO)
    serve()